made chnages to js file on answers

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,12 @@ header {
     float: right;
 }
 
+#feedback {
+    color: orange;
+    
+
+}
+
  #start-block p {
     color: orange;
     justify-content: center;
